--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@
 !analyzer.py
 
 # example
-!/example/
-!/examples/**
-!/examples/screenshot.png
-!/examples/screenshot_0.png
+!example/
+!examples/**/
+!examples/screenshot.png
+!examples/screenshot_0.png
 # --
 !.gitignore
 !README.md
