--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 
 # example
 !example/
-!examples/**/
-!examples/screenshot.png
-!examples/screenshot_0.png
+!example/**/
+!example/screenshot.png
+!example/screenshot_0.png
 # --
 !.gitignore
 !README.md
